# GraspEase

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  mult.py  settings.gradle
Arduino IDE codes/Arduino IDE codes/: Better_UI.ino  Gateway_code.ino  IMU_Sender.ino  Pedal_Sender.ino  Reciever_code.ino  Switch_sender.ino
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/tflite/: CMakeLists.txt  TFLiteEngine.cpp  TFLiteEngine.h  TFLiteEngineJNI.cpp  whisper.h
app/src/main/jni/tflite/tf-lite-api/tensorflow_src/tensorflow/lite/experimental/resource/: initialization_status.h  resource_base.h
app/src/main/kotlin/com/graspease/dev/: MainActivity.kt  VoiceTesterViewModel.kt
app/src/main/kotlin/com/graspease/dev/tflite/: TFLiteEngineNative.kt
app/src/main/kotlin/com/graspease/dev/voice/: CloudSttController.kt  Recorder.kt  RiffWaveHelper.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: app_overview.md
